cmake_minimum_required(VERSION 3.2)
project(alteraorbis)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ai/aineeds.cpp
    ai/aineeds.h
    ai/domainai.cpp
    ai/domainai.h
    ai/marketai.cpp
    ai/marketai.h
    ai/rebuildai.cpp
    ai/rebuildai.h
    ai/roadai.cpp
    ai/roadai.h
    ai/tasklist.cpp
    ai/tasklist.h
    audio/xenoaudio.cpp
    audio/xenoaudio.h
    build/CMakeFiles/2.8.12.2/CompilerIdC/CMakeCCompilerId.c
    build/CMakeFiles/2.8.12.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    builder/animationbuilder.cpp
    builder/animationbuilder.h
    builder/atlas.cpp
    builder/atlas.h
    builder/btexture.cpp
    builder/btexture.h
    builder/builder.cpp
    builder/builder.h
    builder/dither.cpp
    builder/dither.h
    builder/modelbuilder.cpp
    builder/modelbuilder.h
    builder/VertexOptimizer.cpp
    builder/VertexOptimizer.h
    builder/xfileparser.cpp
    builder/xfileparser.h
    CMakeFiles/2.8.12.2/CompilerIdC/CMakeCCompilerId.c
    CMakeFiles/2.8.12.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    converter/converter.cpp
    engine/animation.cpp
    engine/animation.h
    engine/bolt.cpp
    engine/bolt.h
    engine/camera.cpp
    engine/camera.h
    engine/engine.cpp
    engine/engine.h
    engine/enginelimits.h
    engine/engineshaders.cpp
    engine/engineshaders.h
    engine/fixedgeom.cpp
    engine/fixedgeom.h
    engine/gpustatemanager.cpp
    engine/gpustatemanager.h
    engine/lighting.cpp
    engine/lighting.h
    engine/loosequadtree.cpp
    engine/loosequadtree.h
    engine/map.cpp
    engine/map.h
    engine/model.cpp
    engine/model.h
    engine/modelvoxel.h
    engine/particle.cpp
    engine/particle.h
    engine/platformgl.h
    engine/renderqueue.cpp
    engine/renderqueue.h
    engine/rendertarget.cpp
    engine/rendertarget.h
    engine/screenport.cpp
    engine/screenport.h
    engine/serialize.cpp
    engine/serialize.h
    engine/settings.cpp
    engine/settings.h
    engine/shadermanager.cpp
    engine/shadermanager.h
    engine/surface.cpp
    engine/surface.h
    engine/text.cpp
    engine/text.h
    engine/texture.cpp
    engine/texture.h
    engine/texturetype.h
    engine/ufoutil.cpp
    engine/ufoutil.h
    engine/uirendering.cpp
    engine/uirendering.h
    engine/vertex.cpp
    engine/vertex.h
    FastLZ/fastlz.c
    FastLZ/fastlz.h
    freetype/builds/amiga/include/config/ftconfig.h
    freetype/builds/amiga/include/config/ftmodule.h
    freetype/builds/amiga/src/base/ftdebug.c
    freetype/builds/amiga/src/base/ftsystem.c
    freetype/builds/atari/ATARI.H
    freetype/builds/mac/ftmac.c
    freetype/builds/unix/ftsystem.c
    freetype/builds/vms/ftconfig.h
    freetype/builds/vms/ftsystem.c
    freetype/builds/wince/ftdebug.c
    freetype/builds/windows/ftdebug.c
    freetype/devel/ft2build.h
    freetype/devel/ftoption.h
    freetype/include/config/ftconfig.h
    freetype/include/config/ftheader.h
    freetype/include/config/ftmodule.h
    freetype/include/config/ftoption.h
    freetype/include/config/ftstdlib.h
    freetype/include/internal/services/svbdf.h
    freetype/include/internal/services/svcid.h
    freetype/include/internal/services/svgldict.h
    freetype/include/internal/services/svgxval.h
    freetype/include/internal/services/svkern.h
    freetype/include/internal/services/svmm.h
    freetype/include/internal/services/svotval.h
    freetype/include/internal/services/svpfr.h
    freetype/include/internal/services/svpostnm.h
    freetype/include/internal/services/svprop.h
    freetype/include/internal/services/svpscmap.h
    freetype/include/internal/services/svpsinfo.h
    freetype/include/internal/services/svsfnt.h
    freetype/include/internal/services/svttcmap.h
    freetype/include/internal/services/svtteng.h
    freetype/include/internal/services/svttglyf.h
    freetype/include/internal/services/svwinfnt.h
    freetype/include/internal/services/svxf86nm.h
    freetype/include/internal/autohint.h
    freetype/include/internal/ftcalc.h
    freetype/include/internal/ftdebug.h
    freetype/include/internal/ftdriver.h
    freetype/include/internal/ftgloadr.h
    freetype/include/internal/ftmemory.h
    freetype/include/internal/ftobjs.h
    freetype/include/internal/ftpic.h
    freetype/include/internal/ftrfork.h
    freetype/include/internal/ftserv.h
    freetype/include/internal/ftstream.h
    freetype/include/internal/fttrace.h
    freetype/include/internal/ftvalid.h
    freetype/include/internal/internal.h
    freetype/include/internal/psaux.h
    freetype/include/internal/pshints.h
    freetype/include/internal/sfnt.h
    freetype/include/internal/t1types.h
    freetype/include/internal/tttypes.h
    freetype/include/freetype.h
    freetype/include/ft2build.h
    freetype/include/ftadvanc.h
    freetype/include/ftautoh.h
    freetype/include/ftbbox.h
    freetype/include/ftbdf.h
    freetype/include/ftbitmap.h
    freetype/include/ftbzip2.h
    freetype/include/ftcache.h
    freetype/include/ftcffdrv.h
    freetype/include/ftchapters.h
    freetype/include/ftcid.h
    freetype/include/fterrdef.h
    freetype/include/fterrors.h
    freetype/include/ftgasp.h
    freetype/include/ftglyph.h
    freetype/include/ftgxval.h
    freetype/include/ftgzip.h
    freetype/include/ftimage.h
    freetype/include/ftincrem.h
    freetype/include/ftlcdfil.h
    freetype/include/ftlist.h
    freetype/include/ftlzw.h
    freetype/include/ftmac.h
    freetype/include/ftmm.h
    freetype/include/ftmodapi.h
    freetype/include/ftmoderr.h
    freetype/include/ftotval.h
    freetype/include/ftoutln.h
    freetype/include/ftpfr.h
    freetype/include/ftrender.h
    freetype/include/ftsizes.h
    freetype/include/ftsnames.h
    freetype/include/ftstroke.h
    freetype/include/ftsynth.h
    freetype/include/ftsystem.h
    freetype/include/fttrigon.h
    freetype/include/ftttdrv.h
    freetype/include/fttypes.h
    freetype/include/ftwinfnt.h
    freetype/include/ftxf86.h
    freetype/include/t1tables.h
    freetype/include/ttnameid.h
    freetype/include/tttables.h
    freetype/include/tttags.h
    freetype/include/ttunpat.h
    freetype/src/autofit/afangles.c
    freetype/src/autofit/afangles.h
    freetype/src/autofit/afblue.c
    freetype/src/autofit/afblue.h
    freetype/src/autofit/afcjk.c
    freetype/src/autofit/afcjk.h
    freetype/src/autofit/afcover.h
    freetype/src/autofit/afdummy.c
    freetype/src/autofit/afdummy.h
    freetype/src/autofit/aferrors.h
    freetype/src/autofit/afglobal.c
    freetype/src/autofit/afglobal.h
    freetype/src/autofit/afhints.c
    freetype/src/autofit/afhints.h
    freetype/src/autofit/afindic.c
    freetype/src/autofit/afindic.h
    freetype/src/autofit/aflatin.c
    freetype/src/autofit/aflatin.h
    freetype/src/autofit/aflatin2.c
    freetype/src/autofit/aflatin2.h
    freetype/src/autofit/afloader.c
    freetype/src/autofit/afloader.h
    freetype/src/autofit/afmodule.c
    freetype/src/autofit/afmodule.h
    freetype/src/autofit/afpic.c
    freetype/src/autofit/afpic.h
    freetype/src/autofit/afranges.c
    freetype/src/autofit/afranges.h
    freetype/src/autofit/afscript.h
    freetype/src/autofit/afstyles.h
    freetype/src/autofit/aftypes.h
    freetype/src/autofit/afwarp.c
    freetype/src/autofit/afwarp.h
    freetype/src/autofit/afwrtsys.h
    freetype/src/autofit/autofit.c
    freetype/src/autofit/hbshim.c
    freetype/src/autofit/hbshim.h
    freetype/src/base/basepic.c
    freetype/src/base/basepic.h
    freetype/src/base/ftadvanc.c
    freetype/src/base/ftapi.c
    freetype/src/base/ftbase.c
    freetype/src/base/ftbase.h
    freetype/src/base/ftbbox.c
    freetype/src/base/ftbdf.c
    freetype/src/base/ftbitmap.c
    freetype/src/base/ftcalc.c
    freetype/src/base/ftcid.c
    freetype/src/base/ftdbgmem.c
    freetype/src/base/ftdebug.c
    freetype/src/base/ftfstype.c
    freetype/src/base/ftgasp.c
    freetype/src/base/ftgloadr.c
    freetype/src/base/ftglyph.c
    freetype/src/base/ftgxval.c
    freetype/src/base/ftinit.c
    freetype/src/base/ftlcdfil.c
    freetype/src/base/ftmac.c
    freetype/src/base/ftmm.c
    freetype/src/base/ftobjs.c
    freetype/src/base/ftotval.c
    freetype/src/base/ftoutln.c
    freetype/src/base/ftpatent.c
    freetype/src/base/ftpfr.c
    freetype/src/base/ftpic.c
    freetype/src/base/ftrfork.c
    freetype/src/base/ftsnames.c
    freetype/src/base/ftstream.c
    freetype/src/base/ftstroke.c
    freetype/src/base/ftsynth.c
    freetype/src/base/ftsystem.c
    freetype/src/base/fttrigon.c
    freetype/src/base/fttype1.c
    freetype/src/base/ftutil.c
    freetype/src/base/ftwinfnt.c
    freetype/src/base/ftxf86.c
    freetype/src/base/md5.c
    freetype/src/base/md5.h
    freetype/src/bdf/bdf.c
    freetype/src/bdf/bdf.h
    freetype/src/bdf/bdfdrivr.c
    freetype/src/bdf/bdfdrivr.h
    freetype/src/bdf/bdferror.h
    freetype/src/bdf/bdflib.c
    freetype/src/bzip2/ftbzip2.c
    freetype/src/cache/ftcache.c
    freetype/src/cache/ftcbasic.c
    freetype/src/cache/ftccache.c
    freetype/src/cache/ftccache.h
    freetype/src/cache/ftccback.h
    freetype/src/cache/ftccmap.c
    freetype/src/cache/ftcerror.h
    freetype/src/cache/ftcglyph.c
    freetype/src/cache/ftcglyph.h
    freetype/src/cache/ftcimage.c
    freetype/src/cache/ftcimage.h
    freetype/src/cache/ftcmanag.c
    freetype/src/cache/ftcmanag.h
    freetype/src/cache/ftcmru.c
    freetype/src/cache/ftcmru.h
    freetype/src/cache/ftcsbits.c
    freetype/src/cache/ftcsbits.h
    freetype/src/cff/cf2arrst.c
    freetype/src/cff/cf2arrst.h
    freetype/src/cff/cf2blues.c
    freetype/src/cff/cf2blues.h
    freetype/src/cff/cf2error.c
    freetype/src/cff/cf2error.h
    freetype/src/cff/cf2fixed.h
    freetype/src/cff/cf2font.c
    freetype/src/cff/cf2font.h
    freetype/src/cff/cf2ft.c
    freetype/src/cff/cf2ft.h
    freetype/src/cff/cf2glue.h
    freetype/src/cff/cf2hints.c
    freetype/src/cff/cf2hints.h
    freetype/src/cff/cf2intrp.c
    freetype/src/cff/cf2intrp.h
    freetype/src/cff/cf2read.c
    freetype/src/cff/cf2read.h
    freetype/src/cff/cf2stack.c
    freetype/src/cff/cf2stack.h
    freetype/src/cff/cf2types.h
    freetype/src/cff/cff.c
    freetype/src/cff/cffcmap.c
    freetype/src/cff/cffcmap.h
    freetype/src/cff/cffdrivr.c
    freetype/src/cff/cffdrivr.h
    freetype/src/cff/cfferrs.h
    freetype/src/cff/cffgload.c
    freetype/src/cff/cffgload.h
    freetype/src/cff/cffload.c
    freetype/src/cff/cffload.h
    freetype/src/cff/cffobjs.c
    freetype/src/cff/cffobjs.h
    freetype/src/cff/cffparse.c
    freetype/src/cff/cffparse.h
    freetype/src/cff/cffpic.c
    freetype/src/cff/cffpic.h
    freetype/src/cff/cfftoken.h
    freetype/src/cff/cfftypes.h
    freetype/src/cid/ciderrs.h
    freetype/src/cid/cidgload.c
    freetype/src/cid/cidgload.h
    freetype/src/cid/cidload.c
    freetype/src/cid/cidload.h
    freetype/src/cid/cidobjs.c
    freetype/src/cid/cidobjs.h
    freetype/src/cid/cidparse.c
    freetype/src/cid/cidparse.h
    freetype/src/cid/cidriver.c
    freetype/src/cid/cidriver.h
    freetype/src/cid/cidtoken.h
    freetype/src/cid/type1cid.c
    freetype/src/gxvalid/gxvalid.c
    freetype/src/gxvalid/gxvalid.h
    freetype/src/gxvalid/gxvbsln.c
    freetype/src/gxvalid/gxvcommn.c
    freetype/src/gxvalid/gxvcommn.h
    freetype/src/gxvalid/gxverror.h
    freetype/src/gxvalid/gxvfeat.c
    freetype/src/gxvalid/gxvfeat.h
    freetype/src/gxvalid/gxvfgen.c
    freetype/src/gxvalid/gxvjust.c
    freetype/src/gxvalid/gxvkern.c
    freetype/src/gxvalid/gxvlcar.c
    freetype/src/gxvalid/gxvmod.c
    freetype/src/gxvalid/gxvmod.h
    freetype/src/gxvalid/gxvmort.c
    freetype/src/gxvalid/gxvmort.h
    freetype/src/gxvalid/gxvmort0.c
    freetype/src/gxvalid/gxvmort1.c
    freetype/src/gxvalid/gxvmort2.c
    freetype/src/gxvalid/gxvmort4.c
    freetype/src/gxvalid/gxvmort5.c
    freetype/src/gxvalid/gxvmorx.c
    freetype/src/gxvalid/gxvmorx.h
    freetype/src/gxvalid/gxvmorx0.c
    freetype/src/gxvalid/gxvmorx1.c
    freetype/src/gxvalid/gxvmorx2.c
    freetype/src/gxvalid/gxvmorx4.c
    freetype/src/gxvalid/gxvmorx5.c
    freetype/src/gxvalid/gxvopbd.c
    freetype/src/gxvalid/gxvprop.c
    freetype/src/gxvalid/gxvtrak.c
    freetype/src/gzip/adler32.c
    freetype/src/gzip/ftgzip.c
    freetype/src/gzip/infblock.c
    freetype/src/gzip/infblock.h
    freetype/src/gzip/infcodes.c
    freetype/src/gzip/infcodes.h
    freetype/src/gzip/inffixed.h
    freetype/src/gzip/inflate.c
    freetype/src/gzip/inftrees.c
    freetype/src/gzip/inftrees.h
    freetype/src/gzip/infutil.c
    freetype/src/gzip/infutil.h
    freetype/src/gzip/zconf.h
    freetype/src/gzip/zlib.h
    freetype/src/gzip/zutil.c
    freetype/src/gzip/zutil.h
    freetype/src/lzw/ftlzw.c
    freetype/src/lzw/ftzopen.c
    freetype/src/lzw/ftzopen.h
    freetype/src/otvalid/otvalid.c
    freetype/src/otvalid/otvalid.h
    freetype/src/otvalid/otvbase.c
    freetype/src/otvalid/otvcommn.c
    freetype/src/otvalid/otvcommn.h
    freetype/src/otvalid/otverror.h
    freetype/src/otvalid/otvgdef.c
    freetype/src/otvalid/otvgpos.c
    freetype/src/otvalid/otvgpos.h
    freetype/src/otvalid/otvgsub.c
    freetype/src/otvalid/otvjstf.c
    freetype/src/otvalid/otvmath.c
    freetype/src/otvalid/otvmod.c
    freetype/src/otvalid/otvmod.h
    freetype/src/pcf/pcf.c
    freetype/src/pcf/pcf.h
    freetype/src/pcf/pcfdrivr.c
    freetype/src/pcf/pcfdrivr.h
    freetype/src/pcf/pcferror.h
    freetype/src/pcf/pcfread.c
    freetype/src/pcf/pcfread.h
    freetype/src/pcf/pcfutil.c
    freetype/src/pcf/pcfutil.h
    freetype/src/pfr/pfr.c
    freetype/src/pfr/pfrcmap.c
    freetype/src/pfr/pfrcmap.h
    freetype/src/pfr/pfrdrivr.c
    freetype/src/pfr/pfrdrivr.h
    freetype/src/pfr/pfrerror.h
    freetype/src/pfr/pfrgload.c
    freetype/src/pfr/pfrgload.h
    freetype/src/pfr/pfrload.c
    freetype/src/pfr/pfrload.h
    freetype/src/pfr/pfrobjs.c
    freetype/src/pfr/pfrobjs.h
    freetype/src/pfr/pfrsbit.c
    freetype/src/pfr/pfrsbit.h
    freetype/src/pfr/pfrtypes.h
    freetype/src/psaux/afmparse.c
    freetype/src/psaux/afmparse.h
    freetype/src/psaux/psaux.c
    freetype/src/psaux/psauxerr.h
    freetype/src/psaux/psauxmod.c
    freetype/src/psaux/psauxmod.h
    freetype/src/psaux/psconv.c
    freetype/src/psaux/psconv.h
    freetype/src/psaux/psobjs.c
    freetype/src/psaux/psobjs.h
    freetype/src/psaux/t1cmap.c
    freetype/src/psaux/t1cmap.h
    freetype/src/psaux/t1decode.c
    freetype/src/psaux/t1decode.h
    freetype/src/pshinter/pshalgo.c
    freetype/src/pshinter/pshalgo.h
    freetype/src/pshinter/pshglob.c
    freetype/src/pshinter/pshglob.h
    freetype/src/pshinter/pshinter.c
    freetype/src/pshinter/pshmod.c
    freetype/src/pshinter/pshmod.h
    freetype/src/pshinter/pshnterr.h
    freetype/src/pshinter/pshpic.c
    freetype/src/pshinter/pshpic.h
    freetype/src/pshinter/pshrec.c
    freetype/src/pshinter/pshrec.h
    freetype/src/psnames/psmodule.c
    freetype/src/psnames/psmodule.h
    freetype/src/psnames/psnamerr.h
    freetype/src/psnames/psnames.c
    freetype/src/psnames/pspic.c
    freetype/src/psnames/pspic.h
    freetype/src/psnames/pstables.h
    freetype/src/raster/ftmisc.h
    freetype/src/raster/ftraster.c
    freetype/src/raster/ftraster.h
    freetype/src/raster/ftrend1.c
    freetype/src/raster/ftrend1.h
    freetype/src/raster/raster.c
    freetype/src/raster/rasterrs.h
    freetype/src/raster/rastpic.c
    freetype/src/raster/rastpic.h
    freetype/src/sfnt/pngshim.c
    freetype/src/sfnt/pngshim.h
    freetype/src/sfnt/sfdriver.c
    freetype/src/sfnt/sfdriver.h
    freetype/src/sfnt/sferrors.h
    freetype/src/sfnt/sfnt.c
    freetype/src/sfnt/sfntpic.c
    freetype/src/sfnt/sfntpic.h
    freetype/src/sfnt/sfobjs.c
    freetype/src/sfnt/sfobjs.h
    freetype/src/sfnt/ttbdf.c
    freetype/src/sfnt/ttbdf.h
    freetype/src/sfnt/ttcmap.c
    freetype/src/sfnt/ttcmap.h
    freetype/src/sfnt/ttcmapc.h
    freetype/src/sfnt/ttkern.c
    freetype/src/sfnt/ttkern.h
    freetype/src/sfnt/ttload.c
    freetype/src/sfnt/ttload.h
    freetype/src/sfnt/ttmtx.c
    freetype/src/sfnt/ttmtx.h
    freetype/src/sfnt/ttpost.c
    freetype/src/sfnt/ttpost.h
    freetype/src/sfnt/ttsbit.c
    freetype/src/sfnt/ttsbit.h
    freetype/src/smooth/ftgrays.c
    freetype/src/smooth/ftgrays.h
    freetype/src/smooth/ftsmerrs.h
    freetype/src/smooth/ftsmooth.c
    freetype/src/smooth/ftsmooth.h
    freetype/src/smooth/ftspic.c
    freetype/src/smooth/ftspic.h
    freetype/src/smooth/smooth.c
    freetype/src/tools/ftrandom/ftrandom.c
    freetype/src/tools/apinames.c
    freetype/src/tools/test_afm.c
    freetype/src/tools/test_bbox.c
    freetype/src/tools/test_trig.c
    freetype/src/truetype/truetype.c
    freetype/src/truetype/ttdriver.c
    freetype/src/truetype/ttdriver.h
    freetype/src/truetype/tterrors.h
    freetype/src/truetype/ttgload.c
    freetype/src/truetype/ttgload.h
    freetype/src/truetype/ttgxvar.c
    freetype/src/truetype/ttgxvar.h
    freetype/src/truetype/ttinterp.c
    freetype/src/truetype/ttinterp.h
    freetype/src/truetype/ttobjs.c
    freetype/src/truetype/ttobjs.h
    freetype/src/truetype/ttpic.c
    freetype/src/truetype/ttpic.h
    freetype/src/truetype/ttpload.c
    freetype/src/truetype/ttpload.h
    freetype/src/truetype/ttsubpix.c
    freetype/src/truetype/ttsubpix.h
    freetype/src/type1/t1afm.c
    freetype/src/type1/t1afm.h
    freetype/src/type1/t1driver.c
    freetype/src/type1/t1driver.h
    freetype/src/type1/t1errors.h
    freetype/src/type1/t1gload.c
    freetype/src/type1/t1gload.h
    freetype/src/type1/t1load.c
    freetype/src/type1/t1load.h
    freetype/src/type1/t1objs.c
    freetype/src/type1/t1objs.h
    freetype/src/type1/t1parse.c
    freetype/src/type1/t1parse.h
    freetype/src/type1/t1tokens.h
    freetype/src/type1/type1.c
    freetype/src/type42/t42drivr.c
    freetype/src/type42/t42drivr.h
    freetype/src/type42/t42error.h
    freetype/src/type42/t42objs.c
    freetype/src/type42/t42objs.h
    freetype/src/type42/t42parse.c
    freetype/src/type42/t42parse.h
    freetype/src/type42/t42types.h
    freetype/src/type42/type42.c
    freetype/src/winfonts/fnterrs.h
    freetype/src/winfonts/winfnt.c
    freetype/src/winfonts/winfnt.h
    game/adviser.cpp
    game/adviser.h
    game/aicomponent.cpp
    game/aicomponent.h
    game/census.cpp
    game/census.h
    game/circuitsim.cpp
    game/circuitsim.h
    game/debugpathcomponent.cpp
    game/debugpathcomponent.h
    game/debugstatecomponent.cpp
    game/debugstatecomponent.h
    game/fluidsim.cpp
    game/fluidsim.h
    game/gameitem.cpp
    game/gameitem.h
    game/gamelimits.h
    game/gamemovecomponent.cpp
    game/gamemovecomponent.h
    game/gameresources.cpp
    game/gamesettings.cpp
    game/gamesettings.h
    game/gridmovecomponent.cpp
    game/gridmovecomponent.h
    game/healthcomponent.cpp
    game/healthcomponent.h
    game/helpscene.cpp
    game/helpscene.h
    game/layout.h
    game/lumoschitbag.cpp
    game/lumoschitbag.h
    game/lumosgame.cpp
    game/lumosgame.h
    game/lumosmath.cpp
    game/lumosmath.h
    game/mapspatialcomponent.cpp
    game/mapspatialcomponent.h
    game/newgeooptions.cpp
    game/newgeooptions.h
    game/news.cpp
    game/news.h
    game/newsconsole.cpp
    game/newsconsole.h
    game/pathmovecomponent.cpp
    game/pathmovecomponent.h
    game/personality.cpp
    game/personality.h
    game/physicsmovecomponent.cpp
    game/physicsmovecomponent.h
    game/physicssims.cpp
    game/physicssims.h
    game/reservebank.cpp
    game/reservebank.h
    game/saveloadscene.cpp
    game/saveloadscene.h
    game/sectorport.h
    game/settingscene.cpp
    game/settingscene.h
    game/sim.cpp
    game/sim.h
    game/team.cpp
    game/team.h
    game/towcomponent.cpp
    game/towcomponent.h
    game/visitor.cpp
    game/visitor.h
    game/visitorstatecomponent.cpp
    game/visitorstatecomponent.h
    game/visitorweb.cpp
    game/visitorweb.h
    game/wallet.h
    game/weather.h
    game/workqueue.cpp
    game/workqueue.h
    game/worldgrid.h
    game/worldinfo.cpp
    game/worldinfo.h
    game/worldmap.cpp
    game/worldmap.h
    gamedbreader/main.cpp
    gamui/gamui.cpp
    gamui/gamui.h
    gamui/gamuifreetype.cpp
    gamui/gamuifreetype.h
    gamui/gamuitest.cpp
    gamui/glew.c
    gamui/glew.h
    gamui/wglew.h
    glew/include/GL/glew.h
    glew/include/GL/glxew.h
    glew/include/GL/wglew.h
    glew/src/glew.c
    glew/src/glewinfo.c
    glew/src/visualinfo.c
    grinliz/glarrayutil.h
    grinliz/glbitarray.h
    grinliz/glcolor.h
    grinliz/glcontainer.cpp
    grinliz/glcontainer.h
    grinliz/gldebug.cpp
    grinliz/gldebug.h
    grinliz/glfixed.cpp
    grinliz/glfixed.h
    grinliz/glgeometry.cpp
    grinliz/glgeometry.h
    grinliz/glinnercircle.h
    grinliz/glmath.h
    grinliz/glmatrix.cpp
    grinliz/glmatrix.h
    grinliz/glmemorypool.cpp
    grinliz/glmemorypool.h
    grinliz/glmicrodb.cpp
    grinliz/glmicrodb.h
    grinliz/glnoise.cpp
    grinliz/glnoise.h
    grinliz/glperformance.cpp
    grinliz/glperformance.h
    grinliz/glprime.cpp
    grinliz/glprime.h
    grinliz/glrandom.cpp
    grinliz/glrandom.h
    grinliz/glrectangle.h
    grinliz/glspatialhash.h
    grinliz/glstringutil.cpp
    grinliz/glstringutil.h
    grinliz/gltypes.h
    grinliz/glutil.cpp
    grinliz/glutil.h
    grinliz/glvector.cpp
    grinliz/glvector.h
    importers/ac3d.c
    importers/ac3d.h
    importers/import.cpp
    importers/import.h
    importers/off.cpp
    importers/off.h
    libs/SDL2/include/begin_code.h
    libs/SDL2/include/close_code.h
    libs/SDL2/include/SDL.h
    libs/SDL2/include/SDL_assert.h
    libs/SDL2/include/SDL_atomic.h
    libs/SDL2/include/SDL_audio.h
    libs/SDL2/include/SDL_bits.h
    libs/SDL2/include/SDL_blendmode.h
    libs/SDL2/include/SDL_clipboard.h
    libs/SDL2/include/SDL_config.h
    libs/SDL2/include/SDL_cpuinfo.h
    libs/SDL2/include/SDL_endian.h
    libs/SDL2/include/SDL_error.h
    libs/SDL2/include/SDL_events.h
    libs/SDL2/include/SDL_filesystem.h
    libs/SDL2/include/SDL_gamecontroller.h
    libs/SDL2/include/SDL_gesture.h
    libs/SDL2/include/SDL_haptic.h
    libs/SDL2/include/SDL_hints.h
    libs/SDL2/include/SDL_joystick.h
    libs/SDL2/include/SDL_keyboard.h
    libs/SDL2/include/SDL_keycode.h
    libs/SDL2/include/SDL_loadso.h
    libs/SDL2/include/SDL_log.h
    libs/SDL2/include/SDL_main.h
    libs/SDL2/include/SDL_messagebox.h
    libs/SDL2/include/SDL_mixer.h
    libs/SDL2/include/SDL_mouse.h
    libs/SDL2/include/SDL_mutex.h
    libs/SDL2/include/SDL_name.h
    libs/SDL2/include/SDL_opengl.h
    libs/SDL2/include/SDL_opengles.h
    libs/SDL2/include/SDL_opengles2.h
    libs/SDL2/include/SDL_pixels.h
    libs/SDL2/include/SDL_platform.h
    libs/SDL2/include/SDL_power.h
    libs/SDL2/include/SDL_quit.h
    libs/SDL2/include/SDL_rect.h
    libs/SDL2/include/SDL_render.h
    libs/SDL2/include/SDL_revision.h
    libs/SDL2/include/SDL_rwops.h
    libs/SDL2/include/SDL_scancode.h
    libs/SDL2/include/SDL_shape.h
    libs/SDL2/include/SDL_stdinc.h
    libs/SDL2/include/SDL_surface.h
    libs/SDL2/include/SDL_system.h
    libs/SDL2/include/SDL_syswm.h
    libs/SDL2/include/SDL_test.h
    libs/SDL2/include/SDL_test_assert.h
    libs/SDL2/include/SDL_test_common.h
    libs/SDL2/include/SDL_test_compare.h
    libs/SDL2/include/SDL_test_crc32.h
    libs/SDL2/include/SDL_test_font.h
    libs/SDL2/include/SDL_test_fuzzer.h
    libs/SDL2/include/SDL_test_harness.h
    libs/SDL2/include/SDL_test_images.h
    libs/SDL2/include/SDL_test_log.h
    libs/SDL2/include/SDL_test_md5.h
    libs/SDL2/include/SDL_test_random.h
    libs/SDL2/include/SDL_thread.h
    libs/SDL2/include/SDL_timer.h
    libs/SDL2/include/SDL_touch.h
    libs/SDL2/include/SDL_types.h
    libs/SDL2/include/SDL_version.h
    libs/SDL2/include/SDL_video.h
    libs/SDL2_mixer/include/SDL_mixer.h
    markov/markov.cpp
    markov/markov.h
    markov/namegen.cpp
    micropather/micropather.cpp
    micropather/micropather.h
    rockgen/rgen.cpp
    scenes/animationscene.cpp
    scenes/animationscene.h
    scenes/battletestscene.cpp
    scenes/battletestscene.h
    scenes/censusscene.cpp
    scenes/censusscene.h
    scenes/characterscene.cpp
    scenes/characterscene.h
    scenes/colortestscene.cpp
    scenes/colortestscene.h
    scenes/credits.h
    scenes/creditsscene.cpp
    scenes/creditsscene.h
    scenes/dialogscene.cpp
    scenes/dialogscene.h
    scenes/fluidtestscene.cpp
    scenes/fluidtestscene.h
    scenes/forgescene.cpp
    scenes/forgescene.h
    scenes/gamescene.cpp
    scenes/gamescene.h
    scenes/gamescenemenu.cpp
    scenes/gamescenemenu.h
    scenes/livepreviewscene.cpp
    scenes/livepreviewscene.h
    scenes/mapscene.cpp
    scenes/mapscene.h
    scenes/navtest2scene.cpp
    scenes/navtest2scene.h
    scenes/navtestscene.cpp
    scenes/navtestscene.h
    scenes/noisetestscene.cpp
    scenes/noisetestscene.h
    scenes/particlescene.cpp
    scenes/particlescene.h
    scenes/rendertestscene.cpp
    scenes/rendertestscene.h
    scenes/soundscene.cpp
    scenes/soundscene.h
    scenes/titlescene.cpp
    scenes/titlescene.h
    scenes/worldgenscene.cpp
    scenes/worldgenscene.h
    script/batterycomponent.cpp
    script/batterycomponent.h
    script/battlemechanics.cpp
    script/battlemechanics.h
    script/buildscript.cpp
    script/buildscript.h
    script/corescript.cpp
    script/corescript.h
    script/countdownscript.cpp
    script/countdownscript.h
    script/distilleryscript.cpp
    script/distilleryscript.h
    script/evalbuildingscript.cpp
    script/evalbuildingscript.h
    script/farmscript.cpp
    script/farmscript.h
    script/flagscript.cpp
    script/flagscript.h
    script/forgescript.cpp
    script/forgescript.h
    script/guardscript.cpp
    script/guardscript.h
    script/itemscript.cpp
    script/itemscript.h
    script/plantscript.cpp
    script/plantscript.h
    script/procedural.cpp
    script/procedural.h
    script/rockgen.cpp
    script/rockgen.h
    script/volcanoscript.cpp
    script/volcanoscript.h
    script/worldgen.cpp
    script/worldgen.h
    script/worldscript.cpp
    script/worldscript.h
    shared/dbhelper.h
    shared/gamedb.h
    shared/gamedbreader.cpp
    shared/gamedbreader.h
    shared/gamedbwriter.cpp
    shared/gamedbwriter.h
    shared/lodepng.cpp
    shared/lodepng.h
    Shiny/include/Shiny.h
    Shiny/include/ShinyConfig.h
    Shiny/include/ShinyData.h
    Shiny/include/ShinyMacros.h
    Shiny/include/ShinyManager.h
    Shiny/include/ShinyNode.h
    Shiny/include/ShinyNodePool.h
    Shiny/include/ShinyNodeState.h
    Shiny/include/ShinyOutput.h
    Shiny/include/ShinyPrereqs.h
    Shiny/include/ShinyTools.h
    Shiny/include/ShinyVersion.h
    Shiny/include/ShinyZone.h
    Shiny/src/ShinyManager.c
    Shiny/src/ShinyNode.c
    Shiny/src/ShinyNodePool.c
    Shiny/src/ShinyNodeState.c
    Shiny/src/ShinyOutput.c
    Shiny/src/ShinyTools.c
    Shiny/src/ShinyZone.c
    testbed/main.cpp
    tinyxml2/tinyxml2.cpp
    tinyxml2/tinyxml2.h
    widget/barstack.cpp
    widget/barstack.h
    widget/consolewidget.cpp
    widget/consolewidget.h
    widget/endwidget.cpp
    widget/endwidget.h
    widget/facewidget.cpp
    widget/facewidget.h
    widget/hpbar.cpp
    widget/hpbar.h
    widget/itemdescwidget.cpp
    widget/itemdescwidget.h
    widget/mapgridwidget.cpp
    widget/mapgridwidget.h
    widget/moneywidget.cpp
    widget/moneywidget.h
    widget/startwidget.cpp
    widget/startwidget.h
    widget/tutorialwidget.cpp
    widget/tutorialwidget.h
    win32/framebuffer.cpp
    win32/framebuffer.h
    win32/main.cpp
    worldgen/wgen.cpp
    xarchive/glstreamer.cpp
    xarchive/glstreamer.h
    xarchive/squisher.cpp
    xarchive/squisher.h
    xarchive/xatest.cpp
    xegame/cameracomponent.cpp
    xegame/cameracomponent.h
    xegame/cgame.cpp
    xegame/cgame.h
    xegame/chit.cpp
    xegame/chit.h
    xegame/chitbag.cpp
    xegame/chitbag.h
    xegame/chitcontext.cpp
    xegame/chitcontext.h
    xegame/chitevent.h
    xegame/component.cpp
    xegame/component.h
    xegame/componentfactory.cpp
    xegame/componentfactory.h
    xegame/cticker.cpp
    xegame/cticker.h
    xegame/game.cpp
    xegame/game.h
    xegame/istringconst.cpp
    xegame/istringconst.h
    xegame/itemcomponent.cpp
    xegame/itemcomponent.h
    xegame/rendercomponent.cpp
    xegame/rendercomponent.h
    xegame/scene.cpp
    xegame/scene.h
    xegame/spatialcomponent.cpp
    xegame/spatialcomponent.h
    xegame/testmap.cpp
    xegame/testmap.h
    xegame/xegamelimits.h
    xegame/xeitem.h
    version.h)

add_executable(alteraorbis ${SOURCE_FILES})